# zeek-community-id

./: .gitignore  CMakeLists.txt  COPYING  README  configure  configure.plugin
.github/workflows/: zeek-matrix.yml  zeek-nightly.yml
scripts/: __load__.bro
scripts/Corelight/CommunityID/: __load__.bro  __load__.zeek  main.bro  main.zeek  notice.zeek
src/: Plugin.cc  Plugin.h  communityid.bif  zeek-compat.h
tests/: btest.cfg
tests/Baseline/community-id.show-plugin/: output
tests/Baseline/communityid.run-pcaps/: icmp.pcap.out  icmp6.pcap.out  ipv6.pcap.out  tcp.pcap.out  udp.pcap.out
tests/Baseline/communityid.show-plugin/: output
tests/Scripts/: get-bro-env
tests/community-id/: show-plugin.bro
tests/communityid/: notice.zeek  run-pcaps.bro  run-pcaps.zeek  show-plugin.zeek
